correction config
